--- a/index.html
+++ b/index.html
@@ -2,95 +2,317 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/estilos.css">
-    <title>Página güeb</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <style>
+    .slider {
+      background: url("images/principal.jpg");
+      height: 100vh;
+      background-size: cover;
+      background-position: 65%;
+    }
+
+    body {
+      position: relative;
+
+    }
+
+    .sombra {
+      text-shadow: 2px 2px #F7C878;
+      ;
+    }
+
+    .color1 {
+      background-color: #F7C878;
+    }
+
+    .nav-link.active {
+      background-color: #f7d9a1 !important;
+    }
+
+    .color2 {
+      background-color: rgb(251, 252, 235);
+    }
+
+    .color3 {
+      background-color: #DDB27D;
+    }
+
+    .color4 {
+      background-color: #f7d9a1;
+    }
+  </style>
+  <title>Taniacademia</title>
 </head>
 
-<body>
-    <div class="container">
-        <div class="row">
-            
+<body class="color4" data-spy="scroll" data-target="#navbarcito" data-offset="0">
+  <section class="container-fluid slider d-flex flex-column justify-content-center align-items-center">
+    <h1 class="display-5 mb-5">Academia He 和</h1>
+  </section>
 
-            <div class="container">
-                <nav class="nav fixed-top bg-dark col-sm-12 text-light py-3">
-                    <a class="footer-brand" href="index.html"><img src="images/logo.png" width="30" height="30"
-                            class="d-inline-block align-top">
+  <nav id="navbarcito" class="navbar sticky-top color1 navbar-expand-sm  navbar-light">
+    <button class="dropdown-toggler mr-3" type="button" data-toggle="collapse" aria-haspopup="true"
+      aria-expanded="false" data-target="#navbarTogglerDemo01"><span class="navbar-toggler-icon"></span></button>
 
-                        <a class="nav-item nav-link active" href="#">Inicio</a>
+    <a class="navbar-brand" href="index.html">
+      <img src="images/he.png" width="30" height="30" class="d-inline-block align-top">
+      He
+    </a>
+    <div class="collapse d-flex justify-content-center align-items-center navbar-collapse" id="navbarTogglerDemo01">
+      <div class="navbar-nav nav-pills text-center">
+        <a class="nav-item nav-link" href="index.html">Inicio</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">Clases</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#ClasesMañana">Mañana</a>
+            <a class="dropdown-item" href="#ClasesTarde">Tarde</a>
+          </div>
+        </li>
+        <a class="nav-item nav-link" href="#Actividades">Actividades</a>
+        <a class="nav-item nav-link" href="#Noticias">Noticias</a>
+        <a class="nav-item nav-link" href="#Contacto">Contacto</a>
+      </div>
+    </div>
+  </nav>
 
-                        <a class="nav-item dropdown nav-link dropdown-toggle" role="button" aria-haspopup="true"
-                            aria-expanded="false" href="#" data-toggle="dropdown">Opciones</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Cositas</a>
-                            <a class="dropdown-item" href="#">Wow más cosas</a>
-                            <a class="dropdown-item" href="#">Cosichuelas</a>
-                        </div>
-                    </a>
-                    <a class="nav-item nav-link" href="#">Otro link</a>
-
-                    </a>
-                </nav>
-            </div></div>
-            <div class="row">
-            <div class="col-sm-12"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus iste, sapiente sint ducimus voluptatem maxime nisi libero unde vitae deleniti temporibus perspiciatis suscipit expedita esse dolor, ea et quia Si te gustan los vinitos los vinitos de verdad, has llegado a la página adecuada somos una página que junta el Lorem ipsum con los vinitos de una forma fascinante. Demos gracias una vez más al mundo de internet :) laudantium et nam id reprehenderit sit maiores, illum deleniti nisi hic quibusdam, amo los vinillos!</div>
-            <div class="row">
+  <section>
+    <h1 class="display-4 m-5" id="Actividades">Actividades</h1>
+    <section class="container mt-5 pt-3">
+      <div class="card-deck mb-5">
+        <div class="card">
+          <img src="images/tecito.png" class="card-img-top img-fluid" alt="Taller Té">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content. This content is a little bit longer.</p>
+            <p class="card-text"> <a class="btn color1">Ir al taller</a></p>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-sm-8 col-md-3 hidden-xs-down">
-                <div class="jumbotron">
-                    <h4>¿Jumbotrones?</h4>
-                    <p class="lead">¿Te gusta el vinillo más que a un tonto un lorem ipsum?</p>
-                    <hr class="my-4">
-                    <p>Entonces he de comentarte que las uvas sin fermentar son más sanotas, ¡te lo contamos todo en el enlace!</p>
-                    <p class="lead">
-                      <a class="btn btn-primary btn-lg" href="#" role="button">¡A jumbear!</a>
-                    </p>
-                  </div>
-
-            </div>
-
-            <div class="col-sm-4 col-md-6">
-                <div class="card">
-                    <img src="images/uvitas.png" class="card-img-top" alt="Lorem Vinum">
-                    <div class="card-body">
-                        <h5 class="card-title">Lorem Vinum</h5>
-                        <p class="card-text">Lorem vinum dolor sit bebet, consectetur adipisicing elit. Aut nostrum
-                            obcaecati, earum cum molestias ab, natus quia ea quae, ratione repudiandae labore? Alias,
-                            quas nam.</p>
-                        <a href="#" class="btn btn-primary">¡Púlsame!</a>
-                    </div>
-                </div>
-            </div>
+        <div class="card">
+          <img src="images/bonsai.png" class="card-img-top img-fluid" alt="Taller de bonsáis">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">
+              <a class="btn color1">Ir al taller</a>
+            </p>
+          </div>
         </div>
+        <div class="card">
+          <img src="images/he.png" class="card-img-top img-fluid" alt="Taller de caligrfía">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"> <a class="btn color1">Ir al taller</a></p>
+          </div>
+        </div>
+      </div>
 
-        <footer class="footer fixed-bottom py-4">
-            <div class="container">
-                <span class="text-muted row">
-                    <div class="col-sm text-center">Contactem, ipsum dolor sit amet consectetur adipisicing elit. Iste,
-                        provident!</div>
-                    <div class="col-sm text-center">Contactem! ipsum dolor sit amet consectetur adipisicing elit. Iste,
-                        provident! </div>
-                </span>
+    </section>
+
+
+
+    <div class="d-flex justify-content-center">
+      <button type="button" class="btn color1 text-white font-weight-bolder shadow-lg circle" data-toggle="modal"
+        data-target="#exampleModal">
+        ¿Quieres suscribirte a nuestra newsletter?
+      </button>
+    </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">¡Únete al mandarinato!</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Introduce tu e-mail</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">No te arrepentirás.</small>
             </div>
-        </footer>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1">Suscribirme a esta newsletter</label>
+            </div>
 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn color4" data-dismiss="modal">Aceptar </button>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <h1 id="Noticias" class="display-4 ml-5">Última hora</h1>
+    <section class="container align-items-center" style="width: 40%; height: 40%;">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active shadow-lg">
+            <img src="images/fenix.png" class="d-block w-100" alt="Año del fénix">
+            <div class="carousel-caption  font-italic">
+              <h1 class="text-white font-weight-bolder sombra">Año del fénix</h1>
+              <p class="text-body rounded color2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem
+                asperiores deserunt veritatis autem debitis deleniti.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/cerdo.png" class="d-block w-100" alt="Año del cerdo">
+            <div class="carousel-caption font-italic">
+              <h1 class="text-white  font-weight-bolder sombra">Año del cerdo</h1>
+              <p class="text-body rounded color2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem
+                asperiores deserunt veritatis autem debitis deleniti.</p>
+            </div>
+
+          </div>
+          <div class="carousel-item">
+            <img src="images/gallo.png" class="d-block w-100" alt="Año del gallo">
+            <div class="carousel-caption  font-italic">
+              <h1 class="text-white  font-weight-bolder sombra">Año del gallo</h1>
+              <p class="text-body rounded color2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem
+                asperiores deserunt veritatis autem debitis deleniti.</p>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Siguiente</span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+
+    <h1 class="display-4 m-5">Contacto</h1>
+    <section class="container rounded mt-5">
+      <div id="Contacto" class="jumbotron color2">
+        <h4>¿Tienes algo que decirnos? </h4>
+        <p class="lead">有问题吗?</p>
+        <hr class="mt-3">
+        <p>¿Que no te ha gustado que no ponga ni los precios ni los horarios en la página porque no voy a dedicarle
+          tanto tiempo a inventármelo? ¿simplemente te aptece contarnos tu vida un ratito? </p>
+
+
+        <div class="container">
+          <form>
+            <h2> ¡¡Contáctanos!!</h2>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="first">Nombre</label>
+                  <input type="text" class="form-control" placeholder="Introduce tu nombre" id="first">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="last">Apellidos</label>
+                  <input type="text" class="form-control" placeholder="Introduce tus apellidos" id="last">
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="datosExtra">Lo que te apetezca</label>
+                  <input type="text" class="form-control" placeholder="Introduce lo que te venga en gana" id="company">
+                </div>
+
+
+              </div>
+
+              <div class="col-md-6">
+
+                <div class="form-group">
+                  <label for="tfno">Número de teléfono</label>
+                  <input type="tel" class="form-control" id="tfno" placeholder="Introduce tu número">
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-md-6">
+
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="email">
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="porQueChino">¿Por qué empezaste a aprender chino?</label>
+                  <input type="textarea" class="form-control" id="porQueChino" placeholder="porQueChino">
+                </div>
+
+              </div>
+            </div>
+
+
+            <label for="horario">¿Qué hora te viene mejor para las clases?</label>
+            <div class="radio">
+              <label>
+                <input type="radio" name="horario" id="horario" value="am" checked>Por las mañanas
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="horario" id="horario" value="pm" checked>Por las tardes
+              </label>
+            </div>
+
+
+            <p class="lead py-2">
+              <a class="btn color3 btn-lg" href="#" role="button">¡A jumbear!</a>
+            </p>
+          </form>
+        </div>
+
+
+      </div>
+    </section>
+
+  </section>
+
+
+
+
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
