--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
   </section>
 
   <nav id="navbarcito" class="navbar sticky-top color1 navbar-expand-sm  navbar-light">
-    <button class="dropdown-toggler mr-3" type="button" data-toggle="collapse" aria-haspopup="true"
+    <button class="navbar-toggler mr-3" type="button" data-toggle="collapse" aria-haspopup="true"
       aria-expanded="false" data-target="#navbarTogglerDemo01"><span class="navbar-toggler-icon"></span></button>
 
     <a class="navbar-brand" href="index.html">
       <img src="images/he.png" width="30" height="30" class="d-inline-block align-top">
       He
     </a>
-    <div class="collapse d-flex justify-content-center align-items-center navbar-collapse" id="navbarTogglerDemo01">
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <div class="navbar-nav nav-pills text-center">
         <a class="nav-item nav-link" href="index.html">Inicio</a>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true"
+          <a class="nav-link navbar-toggle" href="" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">Clases</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#ClasesMañana">Mañana</a>
@@ -157,7 +157,7 @@
     </div>
 
     <h1 id="Noticias" class="display-4 ml-5">Última hora</h1>
-    <section class="container align-items-center" style="width: 40%; height: 40%;">
+    <section class="container-sm">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
