--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 
 
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mb-5">
       <button type="button" class="btn color1 text-white font-weight-bolder shadow-lg circle" data-toggle="modal"
         data-target="#exampleModal">
         ¿Quieres suscribirte a nuestra newsletter?
